--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,15 @@
         android:theme="@style/Theme.Group15_InheritanceRPG" >
         <activity
             android:name=".View.MainActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".View.decision"
+        <activity android:name=".View.DialogueView"
             android:exported="true"/>
         <activity android:name=".View.turn"
             android:exported="true"/>
